<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:hapticFeedbackEnabled="false"
    android:padding="20dp"
    tools:context=".Ui.WorkoutSummaryActivity">

    <EditText
        android:id="@+id/editText"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginBottom="12dp"
        android:autofillHints="Great Run"
        android:background="@drawable/gray_round_edge"
        android:hint="@string/default_comment"
        android:inputType="textMultiLine"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:textAlignment="inherit"
        android:textColor="@color/white"
        android:gravity="top|start"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/doneButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comment_text"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:text="@string/workout_summary"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="42sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:background="@drawable/gray_round_edge"
        android:backgroundTint="#202020"
        android:foregroundTint="@color/neonGreen"
        android:outlineAmbientShadowColor="@color/neonGreen"
        android:outlineSpotShadowColor="@color/neonGreen"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/runDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/runDistance"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:text="@string/duration"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/neonGreen"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/km"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@id/runDistance"
            android:text="@string/km"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/neonGreen"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/runDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/distance"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/neonGreen"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/runDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/runDuration"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@id/startTime"
            android:text="@string/date"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/startTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/runDuration"
            android:layout_alignParentStart="true"
            android:text="@string/start_time"
            android:textColor="@color/lightGrey" />

        <TextView
            android:id="@+id/runSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/runDate"
            android:layout_toEndOf="@id/avgSpeed"
            android:text="@string/speed"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/avgSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/runDate"
            android:layout_alignParentStart="true"
            android:text="@string/average_speed"
            android:textColor="@color/lightGrey" />

        <TextView
            android:id="@+id/ms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/runDate"
            android:layout_toEndOf="@id/runSpeed"
            android:text="@string/m_s"
            android:textColor="@color/white"
            android:textStyle="bold" />


    </RelativeLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ratingText"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ratingBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:background="@drawable/gray_round_edge"
        android:contentDescription="@string/ratingText"
        android:isIndicator="false"
        android:numStars="5"
        android:progressTint="@color/neonGreen"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_image"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/browseButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/browseButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:background="@drawable/green_round_edge"
        android:text="@string/browse_device"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/doneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:background="@drawable/green_round_edge"
        android:text="@string/done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.938"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>